Fix navbar text color for dark mode.

--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,10 @@ body {
     color: white;
   }
 
+  .navbar-brand {
+    color: white !important;
+  }
+
   .jumbotron {
     background-color: black;
   }
